force-app/main/default/objects/BREG_ADDRESS_PROTECTION__c/BREG_ADDRESS_PROTECTION__c.object-meta.xml
<CustomObject>
    <label>ADDRESS PROTECTION</label>
    <nameField>
        <label>NAME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADDRESS PROTECTIONs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>