force-app/main/default/objects/BREG_ADDRESS_PROTECTION__c/fields/breg_BRIM_ADDRESS_PROTECTION_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_ADDRESS_PROTECTION_ID__c</fullName>
    <externalId>true</externalId>
    <label>BRIM ADDRESS PROTECTION ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>