force-app/main/default/objects/BREG_ADDRESS_PROTECTION__c/fields/breg_DATE_DEACTIVATED__c.field-meta.xml
<CustomField>
    <fullName>breg_DATE_DEACTIVATED__c</fullName>
    <label>DATE DEACTIVATED</label>
    <type>DateTime</type>
</CustomField>