force-app/main/default/objects/BREG_ADDRESS_PROTECTION__c/fields/breg_DATE_EXCLUDED__c.field-meta.xml
<CustomField>
    <fullName>breg_DATE_EXCLUDED__c</fullName>
    <label>DATE EXCLUDED</label>
    <type>DateTime</type>
</CustomField>