force-app/main/default/objects/BREG_ADDRESS_PROTECTION__c/fields/breg_VALUE__c.field-meta.xml
<CustomField>
    <fullName>breg_VALUE__c</fullName>
    <label>VALUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>